<resources>
    <string name="app_name">Screen Filter</string>
    <string name="screen_filter_app_desc"><b>Screen Filter</b> is a simple but app that protects your eyes
        from harmful blue light. It also increases the battery life by dimming the screen.</string>
    <string name="disclaimer"><b>Disclaimer:</b> Please note that when filter is <i>ON</i> you cannot
        grant permissions or install apps. Turn <i>OFF</i> the filter before you grant any permissions or
		install apps.</string>
    <string name="filter_color">Filter Color</string>
    <string name="filter_darkness">Filter Darkness</string>
    <string name="filter_warning_desc"><b>Note:</b> Please note that when filter is <i>ON</i> you cannot
    grant permissions or install apps. Turn <i>OFF</i> the filter before you grant any permissions or
    install apps.</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="start_filter">Start filter</string>
    <string name="stop_filter">Stop filter</string>
    <string name="resume_filter">Resume filter</string>
    <string name="pause_filter">Pause filter</string>
    <string name="screen_filter_color">Screen Filter Color</string>
    <string name="can_not_create_window_error">Can\'t create Window!</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="app_settings">App</string>
    <string name="filter_settings">Screen Filter</string>
    <string name="filter_status_bar">Filter Status Bar</string>
    <string name="summary_filter_status_bar">By Enabling this you can filter the status bar
		of your device as well.</string>
    <string name="summary_filter_color">Choose screen filter color.</string>
    <string name="rate_and_review">Rate &amp; Review</string>
    <string name="summary_rate_and_review">Support us by rating this app on <b>Play Store</b>.</string>
    <string name="help_and_support">Help and Support</string>
    <string name="help">Help</string>
    <string name="summary_help">Get help to get started with app.</string>
    <string name="feedback">Feedback</string>
    <string name="summary_feedback">Give us your valuable feedback.</string>
    <string name="summary_about">About this app.</string>
    <string name="reset">Reset</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="summary_reset_settings">Reset all settings to default.</string>
    <string name="success_prefs_reset">All settings have been reset successfully!</string>
    <string name="failure_prefs_reset">Could\'nt reset settings!</string>
    <string name="developer_email">Email : <b>tangledbytes@gamil.com</b></string>
    <string name="developer_email_id">gameofcoding@gamil.com</string>
    <string name="ask_for_help_desc">For any queries please contact to given email.</string>
    <string name="developed_by">Developed By : <b>Tangled Bytes</b></string>
    <string name="chooser_title">Choose</string>
    <string name="version">Version: %1$s</string>
    <string name="permission_request">Grant Permission</string>
    <string name="permission_request_desc">This app needs \"<b>Draw Over Other Apps</b>\"
		permission in order to work. Please grant permission in settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="notification_channel_filter_description">The persistent overlay control notification</string>
    <string name="notification_channel_filter_name">Filter Config.</string>
    <string name="toggle_filter">Toggle Filter</string>
    <string name="open_app">Open App</string>
    <string name="admobAppId">ca-app-pub-3970034979547566~8490300976</string>
    <string name="mainActivityBannerAdID">ca-app-pub-3970034979547566/1733358922</string>
    <string name="filterDialogBannerAdID">ca-app-pub-3940256099942544/96300978111</string>
    <string name="mode">Mode</string>
</resources>