<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:fillViewport="true">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:padding="10dp"
			android:orientation="vertical">
			<ImageView
				android:layout_width="200dp"
				android:layout_height="200dp"
				android:padding="10dp"
				android:src="@drawable/img_launcher"/>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/app_name"
				android:textAppearance="?android:attr/textAppearanceLarge"/>
			<TextView
				android:id="@+id/layout_aboutTextView_app_version"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="italic"/>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/developer_email"
				android:textAppearance="?android:attr/textAppearanceSmall"/>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:gravity="center_horizontal"
				android:padding="@dimen/app_desc_padding"
				android:text="@string/screen_filter_app_desc"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/white"/>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_marginLeft="@dimen/disclaimer_margin_left"
				android:layout_marginRight="@dimen/disclaimer_margin_right"
				android:gravity="center_horizontal"
				android:paddingTop="@dimen/disclaimer_padding_top"
				android:paddingBottom="@dimen/disclaimer_padding_bottom"
				android:text="@string/disclaimer"
				android:textAppearance="?android:attr/textAppearanceSmall"/>
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/developed_by"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
		</LinearLayout>
	</ScrollView>
	<Button
		style="?android:attr/buttonBarButtonStyle"
		android:id="@+id/ok"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:text="@android:string/ok"
		android:textColor="@color/accentColor"/>
</LinearLayout>
