<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginLeft="20dp"
	android:layout_marginRight="20dp"
	android:orientation="vertical">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:fillViewport="true">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<Switch
				android:id="@+id/toggle_filter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/toggle_filter"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="@string/filter_color"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
			<SeekBar
				android:id="@+id/filter_color"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<TextView
				android:id="@+id/filter_color_percent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="@string/filter_darkness"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
			<SeekBar
				android:id="@+id/filter_darkness"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<TextView
				android:id="@+id/filter_darkness_percent"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
			<com.google.android.gms.ads.AdView
				xmlns:ads="http://schemas.android.com/apk/res-auto"
				android:id="@+id/adView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				ads:adSize="BANNER"
				ads:adUnitId="@string/filterDialogBannerAdID"/>
			<Spinner
				android:id="@+id/spinner_filter_modes"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"/>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:onClick="openApp"
			android:text="@string/open_app"
			android:textColor="@color/accentColor"/>
		<View
			android:layout_width="0dp"
			android:layout_height="1dp"
			android:layout_weight="1"/>
		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:onClick="ok"
			android:text="@android:string/ok"
			android:textColor="@color/accentColor"/>
	</LinearLayout>
</LinearLayout>
